[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 152.0
margin_top = 113.0
margin_right = 374.0
margin_bottom = 365.0

[node name="Button" type="Button" parent="."]
margin_left = 153.0
margin_top = 390.0
margin_right = 374.0
margin_bottom = 489.0
text = "Coletar dados (nome + número)"

[node name="Button2" type="Button" parent="."]
margin_left = 428.0
margin_top = 393.0
margin_right = 647.0
margin_bottom = 492.0
text = "Incremente seu número"

[node name="Button3" type="Button" parent="."]
margin_left = 689.0
margin_top = 390.0
margin_right = 907.0
margin_bottom = 489.0
text = "Alterando  o nome"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 430.0
margin_top = 113.0
margin_right = 645.0
margin_bottom = 364.0
color = Color( 0.113725, 0.113725, 0.113725, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
margin_left = 14.0
margin_top = 79.0
margin_right = 203.0
margin_bottom = 251.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 689.0
margin_top = 111.0
margin_right = 904.0
margin_bottom = 362.0
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel2" type="RichTextLabel" parent="ColorRect2"]
margin_left = 17.0
margin_top = 83.0
margin_right = 206.0
margin_bottom = 255.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
